@@ -1,8 +1,8 @@
 # --
 # Kernel/Modules/AgentTicketPhoneOutbound.pm - to handle phone calls
-# Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
+# Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: AgentTicketPhoneOutbound.pm,v 1.31.2.1 2009-12-30 01:42:24 sb Exp $
+# $Id: AgentTicketPhoneOutbound.pm,v 1.31.2.2 2010-03-24 11:21:47 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -22,7 +22,7 @@ use Kernel::System::State;
 use Mail::Address;
 
 use vars qw($VERSION);
-$VERSION = qw($Revision: 1.31.2.1 $) [1];
+$VERSION = qw($Revision: 1.31.2.2 $) [1];
 
 sub new {
     my ( $Type, %Param ) = @_;
@@ -622,10 +622,17 @@ sub Run {
 
                 # set pending time if next state is a pending state
                 elsif ( $StateData{TypeName} =~ /^pending/i ) {
+
+                    # get time stamp based on user time zone
+                    my %Time = $Self->{LayoutObject}->TransfromDateSelection(
+                        %GetParam,
+                    );
+
+                    # set pending time
                     $Self->{TicketObject}->TicketPendingTimeSet(
                         UserID   => $Self->{UserID},
                         TicketID => $Self->{TicketID},
-                        %GetParam,
+                        %Time,
                     );
                 }
 
