@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.993.2.122 2010-03-20 00:14:34 mp Exp $
+# $Id: CHANGES,v 1.993.2.123 2010-03-24 11:21:48 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,7 +10,10 @@
 # --
 
 2.4.8 (2010/??/??)
- - (2010/03/19) Fixed bug#5094 - Bulk pending date/time do not get applied to tickets
+ - (2010/03/24) Fixed bug#5164 - Pending time not working if agent as an other
+    timezone.
+ - (2010/03/19) Fixed bug#5094 - Bulk pending date/time do not get applied to
+    tickets.
  - (2010/03/18) Updated Ukrainian language translation, thanks to Belskii Artem!
  - (2010/03/10) Fixed bug#4416 - Merge: whitespace before ticketnumber not removed.
  - (2010/03/09) Fixed bug#5085 - Wrong colours codes in Stats::Graph::dclrs
